Fixed sidenav collapse issue.  Reformatted question extra space.

--- a/CSETWebNg/src/app/layout/layoutmain/layout-main.component.scss
+++ b/CSETWebNg/src/app/layout/layoutmain/layout-main.component.scss
@@ -1855,6 +1855,7 @@ tooltip.glossary-definition.tooltip-left::after {
 ///////////////////////////////////////////////////////////////////////
 .extras-block {
   margin: .5em 0;
+  width: 100%;
 }
 @media screen and (max-width: 990px) {
   .extras-block {
